--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,20 @@ jobs:
       - run: cargo clippy --package tzdb --all-targets -- -D warnings
       - run: cargo test --package tzdb --all-targets -- --show-output
 
+  clippy-pedantic:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Rust
+        uses: ./.github/actions/setup-rust
+        with:
+          key: pedantic
+          components: clippy
+
+      - run: cargo clippy --package tzdb --all-targets -- -D clippy::pedantic
+
   minimum-versions:
     strategy:
       fail-fast: false
