--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
 
   test:
     strategy:
+      fail-fast: false
       matrix:
         toolchain:
           - "1.55"
@@ -54,8 +55,36 @@ jobs:
       - run: cargo clippy --package tzdb --all-targets -- -D warnings
       - run: cargo test --package tzdb --all-targets -- --show-output
 
+  clippy-pedantic:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Rust
+        uses: ./.github/actions/setup-rust
+        with:
+          key: pedantic
+          components: clippy
+
+      - run: cargo clippy --package tzdb --all-targets -- -D clippy::pedantic
+
+  test-shadow:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Rust
+        uses: ./.github/actions/setup-rust
+        with:
+          key: shadow
+
+      - run: cd test-shadow && cargo run
+
   minimum-versions:
     strategy:
+      fail-fast: false
       matrix:
         toolchain:
           - "1.55"
@@ -116,7 +145,7 @@ jobs:
           toolchain: nightly
           components: rust-docs
 
-      - run: RUSTDOCFLAGS="-D warnings --cfg docsrs" cargo doc --package tzdb --all-features --no-deps --features docsrs
+      - run: RUSTDOCFLAGS="-D warnings --cfg docsrs" cargo doc --package tzdb --all-features --no-deps
 
   audit:
     name: "Cargo audit"
@@ -140,6 +169,7 @@ jobs:
 
   powerset-docs:
     strategy:
+      fail-fast: false
       matrix:
         toolchain:
           - "1.55"
@@ -165,10 +195,11 @@ jobs:
         run: cargo hack --version || cargo +stable install cargo-hack --force
 
       - name: Powerset
-        run: cargo hack test --feature-powerset --ignore-private --exclude-features docsrs --doc
+        run: cargo hack test --feature-powerset --ignore-private --doc
 
   powerset-tests:
     strategy:
+      fail-fast: false
       matrix:
         toolchain:
           - "1.55"
@@ -194,10 +225,11 @@ jobs:
         run: cargo hack --version || cargo +stable install cargo-hack --force
 
       - name: Powerset
-        run: cargo hack test --feature-powerset --ignore-private --exclude-features docsrs --tests --lib
+        run: cargo hack test --feature-powerset --ignore-private --tests --lib
 
   build-cross:
     strategy:
+      fail-fast: false
       matrix:
         target:
           - x86_64-unknown-freebsd
@@ -220,7 +252,7 @@ jobs:
           target: ${{ matrix.target }}
           components: clippy
 
-      - run: cross --version || cargo +stable install cross --force
+      - run: cross rustc --target ${{ matrix.target }} -- --version || cargo +stable install cross --force
       - run: cross check --target ${{ matrix.target }} --package tzdb --all-targets
       - run: cross clippy --target ${{ matrix.target }} --package tzdb --all-targets -- -D warnings
       - run: cross build --target ${{ matrix.target }} --package tzdb --lib
@@ -228,6 +260,7 @@ jobs:
 
   build-cross-ios:
     strategy:
+      fail-fast: false
       matrix:
         target:
           - aarch64-apple-ios-sim
@@ -246,7 +279,7 @@ jobs:
           target: ${{ matrix.target }}
           components: clippy
 
-      - run: cross --version || cargo +stable install cross --force
+      - run: cross rustc --target ${{ matrix.target }} -- --version || cargo +stable install cross --force
       - run: cross check --target ${{ matrix.target }} --package tzdb --all-targets
       - run: cross clippy --target ${{ matrix.target }} --package tzdb --all-targets -- -D warnings
       - run: cross build --target ${{ matrix.target }} --package tzdb --lib
