--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,6 +131,35 @@ jobs:
       - name: Test
         run: cargo miri test --package tzdb --all-targets -- --show-output
 
+  cross-miri:
+    strategy:
+      fail-fast: false
+      matrix:
+        target:
+          - aarch64-unknown-linux-gnu
+          - i586-unknown-linux-gnu
+          - mipsel-unknown-linux-gnu
+          - mips64el-unknown-linux-gnuabi64
+          - powerpc-unknown-linux-gnu
+          - powerpc64-unknown-linux-gnu
+          - powerpc64le-unknown-linux-gnu
+
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Rust
+        uses: ./.github/actions/setup-rust
+        with:
+          key: cross-miri
+          toolchain: nightly
+          components: miri
+          target: ${{ matrix.target }}
+
+      - name: Test
+        run: cargo miri test --package tzdb --no-default-features --features by-name --target ${{ matrix.target }} -- --show-output
+
   doc:
     name: "Documentation"
     runs-on: ubuntu-20.04
