--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tzdb"
-version = "0.3.3"
+version = "0.3.4"
 edition = "2018"
 authors = ["René Kijewski <crates.io@k6i.de>"]
 repository = "https://github.com/Kijewski/tzdb"
@@ -16,7 +16,6 @@ readme = "README.md"
 tz-rs = { version = "^0.6.12", features = ["const"] }
 
 # optional dependencies
-byte-slice-cast = { version = "^1.0.0", optional = true }
 iana-time-zone = { version = "^0.1.40", optional = true }
 phf = { version = "^0.10.0", default-features = false, optional = true }
 phf_shared = { version = "^0.10.0", default-features = false, optional = true }
@@ -31,7 +30,7 @@ structmeta = "=0.1.4"
 default = ["by-name", "list", "local", "std", "fallback"]
 
 # Enables [tz_by_name()] to get a time zone at runtime by name:
-by-name = ["phf", "phf_shared", "byte-slice-cast"]
+by-name = ["phf", "phf_shared"]
 
 # Enables [TZ_NAMES] to get a list of all shipped time zones:
 list = []
