--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ readme = "README.md"
 rust-version = "1.60"
 
 [dependencies]
-tz-rs = { version = "^0.6.12", default-features = false, features = ["const"] }
+tz-rs = { version = "^0.6.14", default-features = false, features = ["const"] }
 
 # optional dependencies
-iana-time-zone = { version = "^0.1.43", default-features = false, optional = true }
+iana-time-zone = { version = "^0.1.46", default-features = false, optional = true }
 phf = { version = "^0.11.0", default-features = false, optional = true }
 phf_shared = { version = "^0.11.0", default-features = false, optional = true }
 utcnow = { version = "^0.2.0", default-features = false, optional = true }
@@ -59,5 +59,6 @@ rustdoc-args = ["--cfg", "docsrs"]
 [workspace]
 members = [
     ".",
+    "examples/current-time",
     "make-tzdb",
 ]
