--- a/make-tzdb/Cargo.toml
+++ b/make-tzdb/Cargo.toml
@@ -13,8 +13,7 @@ anyhow = "=1"
 convert_case = "=0.5"
 indexmap = "=1"
 itertools = "=0.10"
-phf_codegen = "=0.11"
-phf_shared = "=0.11"
 ron = "=0.8"
 serde = { version = "=1", features = ["derive"] }
+subprocess = "=0.2"
 tz-rs = "=0.6"
