--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tzdb"
-version = "0.4.5"
-edition = "2021"
+version = "0.5.0"
+edition = "2018"
 authors = ["René Kijewski <crates.io@k6i.de>"]
 repository = "https://github.com/Kijewski/tzdb"
 description = "Static time zone information for tz-rs"
@@ -9,14 +9,12 @@ license = "Apache-2.0"
 keywords = ["date", "time", "timezone", "zone", "calendar"]
 categories = ["date-and-time"]
 readme = "README.md"
-rust-version = "1.60"
+rust-version = "1.55"
 
 [dependencies]
 tz-rs = { version = "^0.6.14", default-features = false, features = ["const"] }
-
-# optional dependencies
-iana-time-zone = { version = "^0.1.46", default-features = false, optional = true }
-utcnow = { version = "^0.2.0", default-features = false, optional = true }
+iana-time-zone = { version = "^0.1.47", default-features = false }
+utcnow = { version = "^0.2.1", default-features = false }
 
 [dev-dependencies]
 proptest = "=1"
@@ -24,31 +22,16 @@ test-strategy = "^0.2.0"
 structmeta = "^0.1.5"
 
 [features]
-default = ["by-name", "list", "local", "std", "fallback", "now"]
-
-# Enables [`tz_by_name()`] to get a time zone at runtime by name:
-by-name = []
-
-# Enables [`TZ_NAMES`] to get a list of all shipped time zones:
-list = []
-
-# Enables [`local_tz()`] to get the system time zone:
-local = ["by-name", "iana-time-zone"]
-
-# Make the unparsed, binary tzdata of a time zone available:
-binary = []
+default = ["std", "fallback"]
 
 # Enable features that need the standard library `std`:
-std = ["alloc", "tz-rs/std", "utcnow?/std"]
+std = ["alloc", "tz-rs/std", "utcnow/std"]
 
 # Enable features that need the standard library `alloc`:
 alloc = ["tz-rs/alloc"]
 
 # Do not fail to compile for unknown target platforms:
-fallback = ["iana-time-zone?/fallback", "utcnow?/fallback"]
-
-# Enables the module [`now`] to get the current time:
-now = ["utcnow"]
+fallback = ["iana-time-zone/fallback", "utcnow/fallback"]
 
 [package.metadata.docs.rs]
 all-features = true
