--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ utcnow = { version = "^0.2.1", default-features = false }
 
 [dev-dependencies]
 proptest = "=1"
-test-strategy = "^0.2.0"
-structmeta = "^0.1.5"
+test-strategy = "=0.1.2"
+structmeta = "=0.1.4"
 
 [features]
 default = ["std", "fallback"]
