--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,9 @@ iana-time-zone = { version = "^0.1.47", default-features = false }
 utcnow = { version = "^0.2.1", default-features = false }
 
 [dev-dependencies]
+criterion = "0.3"
 proptest = "=1"
+rand = { version = "0.8", default-features = false, features = ["std", "small_rng"] }
 test-strategy = "=0.1.2"
 structmeta = "=0.1.4"
 
@@ -32,6 +34,10 @@ alloc = ["tz-rs/alloc"]
 
 # Do not fail to compile for unknown target platforms:
 fallback = ["iana-time-zone/fallback", "utcnow/fallback"]
+
+[[bench]]
+name = "by-name"
+harness = false
 
 [package.metadata.docs.rs]
 all-features = true
