--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,9 @@ iana-time-zone = { version = "^0.1.47", default-features = false }
 utcnow = { version = "^0.2.1", default-features = false }
 
 [dev-dependencies]
-criterion = "0.3"
+criterion = "^0.3.6"
 proptest = "=1"
-rand = { version = "0.8", default-features = false, features = ["std", "small_rng"] }
+rand = { version = "^0.8.5", default-features = false, features = ["std", "small_rng"] }
 test-strategy = "=0.1.2"
 structmeta = "=0.1.4"
 
