--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tzdb"
-version = "0.5.0"
+version = "0.5.0-pre.1"
 edition = "2018"
 authors = ["René Kijewski <crates.io@k6i.de>"]
 repository = "https://github.com/Kijewski/tzdb"
@@ -13,7 +13,7 @@ rust-version = "1.55"
 
 [dependencies]
 tz-rs = { version = "^0.6.14", default-features = false, features = ["const"] }
-iana-time-zone = { version = "^0.1.47", default-features = false }
+iana-time-zone = { version = "^0.1.48", default-features = false }
 utcnow = { version = "^0.2.1", default-features = false }
 
 [dev-dependencies]
