--- a/test-artichoke/tzdb/Cargo.toml
+++ b/test-artichoke/tzdb/Cargo.toml
@@ -1,10 +1,18 @@
 [package]
 name = "tzdb"
-version = "0.4.0"
+version = "0.4.6"
 edition = "2018"
 
 [dependencies]
 orig_tzdb = { package = "tzdb", path = "../.." }
 
 [features]
+default = ["by-name", "list", "local", "std", "fallback", "now"]
+alloc = []
+binary = []
+by-name = []
+fallback = []
+list = []
 local = []
+now = []
+std = ["alloc"]
