--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tzdb"
-version = "0.5.0-pre.1"
+version = "0.5.0-pre.2"
 edition = "2018"
 authors = ["René Kijewski <crates.io@k6i.de>"]
 repository = "https://github.com/Kijewski/tzdb"
@@ -13,7 +13,7 @@ rust-version = "1.55"
 
 [dependencies]
 tz-rs = { version = "^0.6.14", default-features = false, features = ["const"] }
-iana-time-zone = { version = "^0.1.48", default-features = false }
+iana-time-zone = { version = "^0.1.50", default-features = false }
 utcnow = { version = "^0.2.1", default-features = false }
 
 [dev-dependencies]
@@ -22,6 +22,9 @@ proptest = "=1"
 rand = { version = "^0.8.5", default-features = false, features = ["std", "small_rng"] }
 test-strategy = "=0.1.2"
 structmeta = "=0.1.4"
+
+# 1.15 is edition 2021, used (transitively) by criterion
+once_cell = "=1.14"
 
 [features]
 default = ["std", "fallback"]
