--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tzdb"
-version = "0.5.0-pre.2"
+version = "0.5.0-pre.3"
 edition = "2018"
 authors = ["René Kijewski <crates.io@k6i.de>"]
 repository = "https://github.com/Kijewski/tzdb"
@@ -14,7 +14,6 @@ rust-version = "1.55"
 [dependencies]
 tz-rs = { version = "^0.6.14", default-features = false, features = ["const"] }
 iana-time-zone = { version = "^0.1.50", default-features = false }
-utcnow = { version = "^0.2.1", default-features = false }
 
 [dev-dependencies]
 criterion = "^0.3.6"
@@ -30,13 +29,13 @@ once_cell = "=1.14"
 default = ["std", "fallback"]
 
 # Enable features that need the standard library `std`:
-std = ["alloc", "tz-rs/std", "utcnow/std"]
+std = ["alloc", "tz-rs/std"]
 
 # Enable features that need the standard library `alloc`:
 alloc = ["tz-rs/alloc"]
 
 # Do not fail to compile for unknown target platforms:
-fallback = ["iana-time-zone/fallback", "utcnow/fallback"]
+fallback = ["iana-time-zone/fallback"]
 
 [[bench]]
 name = "by-name"
