--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,46 @@
-[workspace]
-members = [
-    "tzdb",
-    "make-tzdb",
-]
+[package]
+name = "tzdb"
+version = "0.2.14"
+edition = "2021"
+authors = ["René Kijewski <crates.io@k6i.de>"]
+repository = "https://github.com/Kijewski/tzdb"
+description = "Static time zone information for tz-rs"
+license = "Apache-2.0"
+keywords = ["date", "time", "timezone", "zone", "calendar"]
+categories = ["date-and-time"]
+readme = "README.md"
+rust-version = "1.57"
+
+[dependencies]
+tz-rs = { version = "0.6.12", features = ["const"] }
+tzdb_05 = { package = "tzdb", version = "0.5.0" }
+
+# optional dependencies
+serde_with_1 = { package = "serde_with", version = "1.5", default-features = false, optional = true }
+serde_with_2 = { package = "serde_with", version = "2", default-features = false, optional = true }
+
+[dev-dependencies]
+serde = { version = "=1", features = ["derive"] }
+serde_json = "=1"
+serde_with_1 = { package = "serde_with", version = "1.5", default-features = false, features = ["macros"] }
+serde_with_2 = { package = "serde_with", version = "2", default-features = false, features = ["macros"] }
+
+[features]
+default = ["by-name", "list", "local"]
+
+serde-as = ["serde-as-1"]
+serde-as-1 = ["serde_with_1"]
+serde-as-2 = ["serde_with_2"]
+
+# legacy, no-op
+by-name = []
+list = []
+local = []
+binary = []
+
+# you are not supposed to use this feature
+docsrs = []
+
+[package.metadata.docs.rs]
+features = ["docsrs"]
+all-features = true
